--- a/src/client/docs/api/mixins.pug
+++ b/src/client/docs/api/mixins.pug
@@ -1,10 +1,10 @@
 mixin propTable(props)
 	table.props
 		thead: tr
-			th %i18n:docs.api.props.name%
-			th %i18n:docs.api.props.type%
-			th %i18n:docs.api.props.optional%
-			th %i18n:docs.api.props.description%
+			th= i18n('docs.api.props.name')
+			th= i18n('docs.api.props.type')
+			th= i18n('docs.api.props.optional')
+			th= i18n('docs.api.props.description')
 		tbody
 			each prop in props
 				tr
@@ -31,7 +31,7 @@ mixin propTable(props)
 							|  (Date)
 					td.optional
 						if prop.optional
-							| %i18n:docs.api.props.yes%
+							= i18n('docs.api.props.yes')
 						else
-							| %i18n:docs.api.props.no%
-					td.desc!= prop.desc[lang] || prop.desc['ja']
+							= i18n('docs.api.props.no')
+					td.desc!= prop.desc ? prop.desc[lang] || prop.desc['ja'] : null
