--- a/src/client/docs/layout.pug
+++ b/src/client/docs/layout.pug
@@ -10,24 +10,24 @@ html(lang= lang)
 		block meta
 
 		//- FontAwesome style
-		style #{common.facss}
+		style #{facss}
 
 	body
 		nav
 			ul
-				each doc in common.docs
+				each doc in docs
 					li: a(href=`/docs/${lang}/${doc.name}`)= doc.title[lang] || doc.title['ja']
 			section
 				h2 API
 				ul
 					li Entities
 						ul
-							each entity in common.entities
-								li: a(href=`/docs/${lang}/api/entities/${common.kebab(entity)}`)= entity
+							each entity in entities
+								li: a(href=`/docs/${lang}/api/entities/${kebab(entity)}`)= entity
 					li Endpoints
 						ul
-							each endpoint in common.endpoints
-								li: a(href=`/docs/${lang}/api/endpoints/${common.kebab(endpoint)}`)= endpoint
+							each endpoint in endpoints
+								li: a(href=`/docs/${lang}/api/endpoints/${kebab(endpoint)}`)= endpoint
 		main
 			article
 				block main
@@ -38,4 +38,4 @@ html(lang= lang)
 				p
 					| %i18n:docs.edit-this-page-on-github%
 					a(href=src target="_blank") %i18n:docs.edit-this-page-on-github-link%
-				small= common.copyright
+				small= copyright
