--- a/src/client/docs/api/entities/view.pug
+++ b/src/client/docs/api/entities/view.pug
@@ -17,4 +17,4 @@ block main
 			each propDef in propDefs
 				section(id= propDef.name)
 					h3= propDef.name
-					+propTable(propDef.params)
+					+propTable(propDef.props)
