--- a/src/docs/style.styl
+++ b/src/docs/style.styl
@@ -60,6 +60,10 @@ nav
 	background #fff
 	border-right solid 2px #eee
 
+	ul
+		padding 0
+		margin 0
+
 @media (max-width 1025px)
 	main
 		margin 0
