--- a/src/docs/api/endpoints/view.pug
+++ b/src/docs/api/endpoints/view.pug
@@ -20,6 +20,9 @@ block main
 	if endpoint.requireCredential
 		div.ui.info: p= i18n('docs.api.endpoints.require-credential')
 
+	if endpoint.limit
+		div.ui.warn: p!= i18n('docs.api.endpoints.limit').replace('{duration}', endpoint.limit.duration).replace('{max}', endpoint.limit.max)
+
 	if params && Object.keys(params).length > 0
 		section
 			h2= i18n('docs.api.endpoints.params')
