--- a/src/docs/base.pug
+++ b/src/docs/base.pug
@@ -7,6 +7,8 @@ html(lang= lang)
 		title
 			| #{title} | Misskey Docs
 		link(rel="stylesheet" href="/docs/assets/style.css")
+		link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css")
+		script(src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js")
 		link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous")
 		block meta
 
