--- a/src/docs/style.styl
+++ b/src/docs/style.styl
@@ -110,10 +110,9 @@ table
 		min-width 128px
 
 code
-	display inline-block
-	padding 8px 10px
+	padding 4px 8px
 	font-family Consolas, 'Courier New', Courier, Monaco, monospace
-	color #295c92
+	//color #295c92
 	background #f2f2f2
 	border-radius 4px
 
@@ -122,3 +121,4 @@ pre
 
 	> code
 		display block
+		padding 16px
