--- a/src/docs/article.pug
+++ b/src/docs/article.pug
@@ -2,3 +2,8 @@ extends ./base
 
 block main
 	!= html
+
+block footer
+	p
+		= i18n('docs.edit-this-page-on-github')
+		a(href=src target="_blank")= i18n('docs.edit-this-page-on-github-link')
