--- a/src/docs/base.pug
+++ b/src/docs/base.pug
@@ -35,7 +35,5 @@ html(lang= lang)
 					| !{content}
 
 			footer
-				p
-					| %i18n:docs.edit-this-page-on-github%
-					a(href=src target="_blank") %i18n:docs.edit-this-page-on-github-link%
+				block footer
 				small= copyright
