--- a/src/docs/api/endpoints/style.styl
+++ b/src/docs/api/endpoints/style.styl
@@ -6,12 +6,14 @@
 	color #fff
 	background #222e40
 	border-radius 4px
+	overflow auto
+	white-space nowrap
 
 	> .method
 		display inline-block
 		margin 0 8px 0 0
 		padding 0 6px
-		color #f4fcff
+		color #fff
 		background #17afc7
 		border-radius 4px
 		user-select none
