--- a/src/docs/style.styl
+++ b/src/docs/style.styl
@@ -9,8 +9,8 @@ body
 main
 	margin 0 0 0 330px
 	padding 64px
-	width 100%
-	max-width 820px
+	width 850px
+	max-width calc(100% - 330px)
 
 	section
 		margin 32px 0
