--- a/src/docs/style.styl
+++ b/src/docs/style.styl
@@ -12,9 +12,6 @@ main
 	width 850px
 	max-width calc(100% - 330px)
 
-	section
-		margin 32px 0
-
 	h1
 		margin 0 0 24px 0
 		padding 16px 0
@@ -22,18 +19,18 @@ main
 		border-bottom solid 2px #eee
 
 	h2
-		margin 0 0 24px 0
+		margin 1em 0 24px 0
 		padding 0 0 16px 0
 		font-size 1.4em
 		border-bottom solid 1px #eee
 
 	h3
-		margin 0
+		margin 1em 0 0 0
 		padding 0
 		font-size 1.25em
 
 	h4
-		margin 0
+		margin 1em 0 0 0
 
 	p
 		margin 1em 0
