--- a/src/docs/style.styl
+++ b/src/docs/style.styl
@@ -36,6 +36,10 @@ main
 		margin 1em 0
 		line-height 1.6em
 
+	hr
+		border none
+		border-bottom solid 2px #eee
+
 	footer
 		margin 32px 0 0 0
 		border-top solid 2px #eee
