--- a/src/docs/style.styl
+++ b/src/docs/style.styl
@@ -40,7 +40,12 @@ main
 		border none
 		border-bottom solid 2px #eee
 
-	footer
+	> aside
+		margin-top 32px
+		padding-top 32px
+		border-top solid 2px #eee
+
+	> footer
 		margin 32px 0 0 0
 		border-top solid 2px #eee
 
